<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EventFinder</string>
    <string name="start_search">Und los</string>
    <string name="load_data">Load data</string>
    <string name="location">Ort</string>
    <string name="point_in_time">Zeitpunkt</string>
    <string name="time_frame">Zeitraum</string>
    <string name="category">Kategorie</string>
    <string name="now">Jetzt</string>
    <string name="hint_search">Suche nach ...</string>
    <string name="dummy">place holder</string>
    <string name="close">Schliessen</string>
    <string name="select_vis">Select Visualisation</string>
    <string name="select_list">List</string>
    <string name="select_map">Map</string>
    <string name="select_timeslider">Timeslider</string>

</resources>
