<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/text_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:hint="@string/hint_search" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/label_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <AutoCompleteTextView
            android:id="@+id/text_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

         <TextView
             android:id="@+id/label_point_in_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/point_in_time"
             android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <Button
            android:id="@+id/button_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/now" />

        <Button
            android:id="@+id/button_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/now" />

        <Button
            android:id="@+id/button_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/now" />

    </LinearLayout>
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

         <Spinner
             android:id="@+id/Spinner01"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:entries="@array/time_frame_names" />
        
        <TextView
            android:id="@+id/label_time_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_frame"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
    	<Spinner
    	    android:id="@+id/spinner_time_frame"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:entries="@array/time_frame_names" />

	</LinearLayout>
	
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/label_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
	        android:id="@+id/spinner_category"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" />
        
    </LinearLayout> 
     
    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_search" />

</LinearLayout>